# danielfrg.com

./: .env  .envrc  .eslintignore  .eslintrc.js  .firebaserc  .gitignore  .gitmodules  .oxfmtrc.json  .prettierignore  .prettierrc  .prettierrc.js  .travis.yml  CNAME  DEVELOP.md  Makefile  Pipfile  README.md  Taskfile.yml  astro.config.mjs  blog.sublime-project  config.toml  deploy.local.sh  deploy.sh  environment.yml  firebase.json  justfile  lint-staged.config.js  netlify.toml  next.config.js  notebook.tpl  oxlint.config.json  package-lock.json  package.json  pelicanconf.py  pnpm-lock.yaml  postcss.config.js  publishconf.py  pyproject.toml  requirements.txt  setup.cfg  (+4 more)
.github/workflows/: check.yml  deploy-cf-pages.yml  deploy-cf.yml  deploy-cloudflare.yml  deploy-firebase.yml  deploy.yml
components/: double-list.js  feature-grid.js  footer.js  header.js  layout.js  post-card.js  post-grid.js
content/: 404.html  archive.md
content/blog/: archive.md
content/pages/: about.md
content/static/: google_verification.html
content/tech-notes/: index.md  istio-k8s-kelsey.md  tgik001.md  tgik002.md  tgik003.md  tgik004.md  tgik005.md
content/video-notes/: index.md  istio-k8s-kelsey.md  tgik001.md  tgik002.md  tgik003.md  tgik004.md  tgik005.md
layouts/: index.headers  index.redir
lib/: config.js  notion.js  posts.js  theme.js  utils.js
nbconvert/: README.md  convert.py  jupyter-fixes.css  nbconvert2.py  notebook.html.j2  notebook.tpl  pyproject.toml  templates.py
nbconvert/css/: jupyter-fixes.css  jupyter-fixes.css.map  jupyter-fixes.min.css  jupyter-fixes.min.css.map  jupyter-fixes.scss
pages/: _app.js  _document.js  archive.js  blog.js  index.js
pages/styles/: double-list.scss  feature-grid.scss  index.css  index.scss  notion.css  post-body.scss  posts-grid.scss
pages/tag/: [tag].js
plugins/liquid_tags/: b64img.py  liquid_tags.py  notebook.py  youtube.py
public/: ads.txt  manifest.webmanifest
public/assets/: highlight.css
public/generated-nbs/: basic-neural-network-python.html  copper-easy-data-analysis-machine-learning-python.html  copper-easy.html  copper-machine-learning-bootstrap-bagging-python.html  copper-machine-learning-python.html  copper-quick-data-transformation-python.html  coursera-data-analysis-quiz-2-python.html  docker-selenium-crawler.html  impala-to-python.html  ipython-parallel-cluster-salt.html  kaggle-bulldozers-basic-cleaning.html  not-so-basic-neural-network-python.html  relevant-content-blog-crawler.html  reproduceit-538-adam-sandler-movies.html  reproduceit-538-baltimore-post.html  reproduceit-reddit-dask.html  ssn-names.html
src/: env.d.ts
src/components/: BlogPost.astro  BlogPostProse.astro  SocialLinks.astro
src/content/: .gitignore  config.ts
theme/: Makefile  README.md  package-lock.json
(+604 files in other folders)
