[tool.poetry]
name = "danielfrg.com"
version = "1.0.0"
description = "danielfrg.com"
authors = ["Daniel Rodriguez <df.rodriguez143@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.1"
ipython = "^7.3.0"
nbconvert = "^5.4.1"
pylint = "^2.3.1"
repo = "^0.1.0"
notebook = "^5.7.6"
jupyterlab = "^0.35.4"
