[tool.poetry]
name = "danielfrg.com"
version = "1.0.0"
description = ""
authors = ["Daniel Rodriguez <daniel@danielfrg.com>"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools", "setuptools_scm", "wheel"]

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.7"
mkdocs-jupyter = "^0.17.3"
nbconvert = "^6.1.0"
PyYAML = "^5.4.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
black = "^21.8b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
ipython = "^7.27.0"
ipykernel = "^6.4.1"

[tool.black]
target-version = ["py36", "py37", "py38"]
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.isort]
# https://black.readthedocs.io/en/stable/the_black_code_style.html#how-black-wraps-lines
multi_line_output=3
lines_after_imports = 2
force_grid_wrap = 0
include_trailing_comma = "true"
use_parentheses = "true"
line_length = 88

