[tool.poetry]
name = "danielfrg.com"
version = "1.0.0"
description = ""
authors = ["Daniel Rodriguez <daniel@danielfrg.com>"]

[build-system]
requires = ["poetry>=1.2.0a2", "setuptools>=57,<58"]
build-backend = "poetry.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.7"
mkdocs-jupyter = "^0.17.3"
nbconvert = "^6.2.0"
PyYAML = "^5.4.1"
fire = "^0.4.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pylint = "^2.10.2"
black = "^21.8b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
ipython = "^7.27.0"
ipykernel = "^6.4.1"

[tool.black]
line_length = 79
skip_string_normalization = true

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
