[project]
name = "nbconvert.danielfrg.com"
version = "1.0.0"
description = "Add your description here"
authors = [{ name = "Daniel Rodriguez", email = "daniel@danielfrg.com" }]
dependencies = [
    "fire>=0.5.0",
    "mkdocs_jupyter>=0.24.2",
    "mkdocs-jupyter==0.24.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
